--- a/views/includes/end.ejs
+++ b/views/includes/end.ejs
@@ -5,9 +5,9 @@
 				<span ><img src="/images/logo.png" alt="" style="width:60px;height:60px" class="center"></span>
 				<path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
 			</svg>
-			<span class="ml-3 text-xl">CHOCODIVINE</span>
+			<span class="ml-3 text-xl"><a href="/">CHOCODIVINE</a></span>
 		</a>
-		<p class="text-sm text-gray-500 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4">© 2020 ChocoDivine —
+		<p class="text-sm text-gray-500 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4">© 2020 ChocoDivine -
 			<a href="https://twitter.com/knyttneve" class="text-gray-600 ml-1" rel="noopener noreferrer" target="_blank"></a>
 		</p>
 		<span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
