--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -391,17 +391,17 @@
 			<div class="bg-white relative flex flex-wrap py-6">
 				<div class="lg:w-1/2 px-6">
 					<h2 class="title-font font-medium text-gray-900 tracking-widest text-sm">ADDRESS</h2>
-					<p class="leading-relaxed">Kurukshetra, Haryana </p>
+					<p class="leading-relaxed">Chocolate Divine, Kurukshetra, Haryana </p>
 				</div>
 				<div class="lg:w-1/2 px-6 mt-4 lg:mt-0">
 					<h2 class="title-font font-medium text-gray-900 tracking-widest text-sm">EMAIL</h2>
-					<a class="text-teal-500 leading-relaxed">example@email.com</a>
+					<a class="text-teal-500 leading-relaxed">chocolatedivine@gmail.com</a>
 					<h2 class="title-font font-medium text-gray-900 tracking-widest text-sm mt-4">PHONE</h2>
 					<p class="leading-relaxed">+91 70156-20913</p>
 				</div>
 			</div>
 		</div>
-		<div class="lg:w-1/3 md:w-1/2 bg-white flex flex-col md:ml-auto w-full md:py-8 mt-8 md:mt-0">
+		<!-- <div class="lg:w-1/3 md:w-1/2 bg-white flex flex-col md:ml-auto w-full md:py-8 mt-8 md:mt-0">
 			<h2 class="text-gray-900 text-lg mb-1 font-medium title-font">Feedback</h2>
 			<p class="leading-relaxed mb-5 text-gray-600">Post-ironic portland shabby chic echo park, banjo fashion axe</p>
 			<input class="bg-white rounded border border-gray-400 focus:outline-none focus:border-teal-500 text-base px-4 py-2 mb-4" placeholder="Name" type="text">
@@ -409,20 +409,19 @@
 			<textarea class="bg-white rounded border border-gray-400 focus:outline-none h-32 focus:border-teal-500 text-base px-4 py-2 mb-4 resize-none" placeholder="Message"></textarea>
 			<button class="text-white bg-teal-500 border-0 py-2 px-6 focus:outline-none hover:bg-teal-600 rounded text-lg">Button</button>
 			<p class="text-xs text-gray-500 mt-3">Chicharrones blog helvetica normcore iceland tousled brook viral artisan.</p>
-		</div>
+		</div> -->
 	</div>
 </section>
 <!-- contact us ends -->
 <!-- <footer></footer> -->
-<footer class="text-gray-700 body-font"
-	>
+<footer class="text-gray-700 body-font">
 	<div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
 		<a class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900">
 				<span ><img src="/images/logo.png" alt="" style="width:60px;height:60px" class="center"></span>
 
 			<span class="ml-3 text-xl">CHOCODIVINE</span>
 		</a>
-		<p class="text-sm text-gray-500 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4">© 2020 ChocoDivine —
+		<p class="text-sm text-gray-500 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4">© 2020 Choco-Divine
 			<a href="#" class="text-gray-600 ml-1" rel="noopener noreferrer" target="_blank"></a>
 		</p>
 		<span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
