--- a/views/shop/checkout.ejs
+++ b/views/shop/checkout.ejs
@@ -52,7 +52,7 @@
 						</div>
 
 							<div class='credit-info'>
-									<form action="/create-order" method="POST" enctype="multipart/form-data">
+									<form action="/Checkout" method="POST" enctype="multipart/form-data">
 								<div class='credit-info-content'>
 									Name :
 									<input
