--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -24,44 +24,122 @@
 			<% } else { %>
 				<ul class="orders">
 					<% orders.forEach(order => { %>
-						<li class="orders__item">
-							<h1>Order Id : <%= order._id %> - <a href="/orders/<%= order._id %>" style="color:blue">Invoice</a></h1>
-							<% if(order.isDone === 1) { %>
-								<h1>Delivered</h1>
-							<% } else if(order.isDone === 0) { %>
-								<h1>
-									Ready for Delivery
-									<% if(isAdminAuthenticated) { %>
-										<form action="/deliverymark/<%= order._id %>" method="POST">
-											<input type="hidden" name="_csrf" value="<%= csrfToken %>">
-											<button class="btn" type="submit">Mark as Delivered</button>
-										</form>
-									<% } %>
-								</h1>
-							<% } else { %>
-								<h1>
-									Check here for order status
-									<% if(isAdminAuthenticated) { %>
-										<form action="/readymark/<%= order._id %>" method="POST">
-											<input type="hidden" name="_csrf" value="<%= csrfToken %>">
-											<button class="btn" type="submit">Mark as Ready</button>
-										</form>
-									<% } %>
-								</h1>
-							<% } %>
-							<% if(order.paymentDone) { %>
-								<h1>Payment Completed!</h1>
-							<% } else { %>
-								<h1>Payment Pending...</h1>
-							<% } %>
-							<ul class="orders__products">
-								<% order.products.forEach(p => { %>
-									<li class="orders__products-item"><%= p.product.title %> (<%= p.quantity %>)</li>
-								<% }); %>
-							</ul>
-						</li>
+						<ul class="orders__products">
+							<% order.products.forEach(p => { %>
+								<li class="orders__products-item"><%= p.product.title %> (<%= p.quantity %>)</li>
+							<% }); %>
+						</ul>
+						<button type="button" class="btn openmodal" data-toggle="modal" data-target="#modal1" data-id="<%= order %>" > Details </button>
+
+
+						<!-- modal -->
+						<div class="modal fade" id="modal1">
+								<div class="modal-dialog modal-dialog-centered">
+										<div class="modal-content">
+												<!-- Modal Header -->
+												<div class="modal-header">
+														<h4 class="modal-title">ORDER DETAILS<br> Thanks for shopping with chocolatedivine !</h4> <button type="button" class="close" data-dismiss="modal">&times;</button>
+												</div> <!-- Modal body -->
+												<div class="modal-body">
+														<div class="container">
+																<!-- <h6>Item Details</h6>
+																<div class="row">
+																		<div class="col"> <img class="img-fluid" src="https://i.imgur.com/iItpzRh.jpg"> </div>
+																		<div class="col-xs-6" style="padding-top: 2vh;">
+																				<ul type="none">
+																						<li>Size: 11</li>
+																						<li>Color: Desert Sage</li>
+																				</ul>
+																		</div>
+																</div> -->
+
+																<div class="row">
+																		<div class="col-xs-6">
+																				<ul type="none">
+																						<li class="left" id="orderid">Order ID:</li>
+																						<li class="left">Date:</li>
+																						<li class="left">Price:</li>
+																						<li class="left">Payment:</li>
+																						<li class="left">Total Price:</li>
+																				</ul>
+																		</div>
+																		<div class="col-xs-6">
+																				<ul class="right" type="none">
+																						<li class="right" ><%= order._id %></li>
+																						<li class="right">19-03-2020</li>
+																						<li class="right">$690</li>
+																						<% if(order.paymentDone) { %>
+																							<li class="right">Done!</li>
+																						<% } else { %>
+																							<li class="right">Pending</li>
+																						<% } %>
+																						<li class="right">$720</li>
+
+
+																				</ul>
+																		</div>
+																</div>
+																<h6>Status</h6>
+																<div class="row" style="border-bottom: none">
+																		<div class="col-xs-6">
+																				<ul type="none">
+																					<% if(order.isDone === 1) { %>
+																						<li class="left">Delivered</li>
+																					<% } else if(order.isDone === 0) { %>
+
+																							<li class="left">Ready for delivery </li>
+																							<% if(isAdminAuthenticated) { %>
+																								<form action="/deliverymark/<%= order._id %>" method="POST" class="right">
+																									<input type="hidden" name="_csrf" value="<%= csrfToken %>">
+																									<button class="btn" type="submit">Mark as Delivered</button>
+																								</form>
+																							<% } %>
+																							<% } else { %>
+																								<h1>
+																									<li class="left">Order Placed </li>
+																									<% if(isAdminAuthenticated) { %>
+																										<form action="/readymark/<%= order._id %>" method="POST">
+																											<input type="hidden" name="_csrf" value="<%= csrfToken %>">
+																											<button class="btn" type="submit">Mark as Ready</button>
+																										</form>
+																									<% } %>
+																								</h1>
+																							<% } %>
+
+
+																				</ul>
+																		</div>
+																		<!-- <div class="col-xs-6">
+																				<ul type="none">
+																						<li class="right">25-03-2020</li>
+																				</ul>
+																		</div> -->
+																		<!-- status -->
+
+
+<!-- status ends -->
+																</div>
+														</div>
+												</div> <!-- Modal footer -->
+												<div class="modal-footer"> <button type="button" class="btn"><a href="/orders/<%= order._id %>" style="color:blue">Invoice</a></button> </div>
+										</div>
+								</div>
+						</div>
+
+
+
+
+
+
 					<% }); %>
 				</ul>
 			<% } %>
 		</main>
+		<script src="/js/order.js" charset="utf-8"></script>
 		<%- include('../includes/end.ejs') %>
+
+
+
+
+
+    <!-- Button to Open the Modal -->  <!-- The Modal -->
