--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -30,104 +30,95 @@
 						<ul class="orders__products">
 							<% order.products.forEach(p => { %>
 								<li class="orders__products-item"><%= p.product.title %> (<%= p.quantity %>)</li>
+
 							<% }); %>
 						</ul>
-						<button type="button" class="btn openmodal" data-toggle="modal" data-target="#modal1" data-id=" <%= order._id %>" > Details </button>
-	</div>
+						<div class="row">
+								<div class="col-xs-6">
+										<ul type="none">
+												<li class="left" >Order ID:</li>
+                        <li class="left" >Ordered By:</li>
+												<li class="left" >Contact:</li>
+												<li class="left" >Total Amount:</li>
+												<li class="left">Payment:</li>
 
-						<!-- modal -->
-						<div class="modal fade" id="modal1">
-								<div class="modal-dialog modal-dialog-centered">
-										<div class="modal-content">
-												<!-- Modal Header -->
-												<div class="modal-header">
-														<h4 class="modal-title">ORDER DETAILS<br> Thanks for shopping with chocolatedivine !</h4> <button type="button" class="close" data-dismiss="modal">&times;</button>
+										</ul>
+								</div>
+								<div class="col-xs-6">
+										<ul class="right" type="none">
+											<% var ordersum =0 %>
+											<% order.products.forEach(p => { %>
 
-												</div> <!-- Modal body -->
 
-												<div class="modal-body">
-														<div class="container">
-																<!-- <h6>Item Details</h6>
-																<div class="row">
-																		<div class="col"> <img class="img-fluid" src="https://i.imgur.com/iItpzRh.jpg"> </div>
-																		<div class="col-xs-6" style="padding-top: 2vh;">
-																				<ul type="none">
-																						<li>Size: 11</li>
-																						<li>Color: Desert Sage</li>
-																				</ul>
-																		</div>
-																</div> -->
+												<% ordersum = ordersum + p.product.price %>
 
-																<div class="row">
-																		<div class="col-xs-6">
-																				<ul type="none">
-																						<li class="left" >Order ID:</li>
+											<% }); %>
 
-																						<li class="left">Payment:</li>
 
-																				</ul>
-																		</div>
-																		<div class="col-xs-6">
-																				<ul class="right" type="none">
-																						<li class="right" id="orderid"></li>
+                        <li class="right"><%= order._id %> </li>
+												<li class="right"><%= order.address.name %> </li>
 
-																						<% if(order.paymentDone) { %>
-																							<li class="right">Done!</li>
-																						<% } else { %>
-																							<li class="right">Pending</li>
-																						<% } %>
+												<li class="right"><%= order.address.number %> </li>
+												  <li class="right"><%= ordersum %> </li>
+
+												<% if(order.paymentDone) { %>
+													<li class="right">Done!</li>
+												<% } else { %>
+													<li class="right">Pending</li>
+												<% } %>
 
 
 
-																				</ul>
-																		</div>
-																</div>
-																<h6>Status</h6>
-																<div class="row center" style="border-bottom: none r">
-																		<div class="col-xs-6">
-																				<ul type="none">
-																					<% if(order.isDone === 1) { %>
-																						<li class="left">Delivered</li>
-																					<% } else if(order.isDone === 0) { %>
+										</ul>
+								</div>
+						</div>
+						<h6>Status</h6>
+						<div class="row center" style="border-bottom: none r">
+								<div class="col-xs-6">
+										<ul type="none">
+											<% if(order.isDone === 1) { %>
+												<li class="left">Delivered</li>
+											<% } else if(order.isDone === 0) { %>
 
-																							<li >Ready for delivery </li>
-																							<% if(isAdminAuthenticated) { %>
-																								<form action="/deliverymark/<%= order._id %>" method="POST" class="right">
-																									<input type="hidden" name="_csrf" value="<%= csrfToken %>">
-																									<button class="btn" type="submit">Mark as Delivered</button>
-																								</form>
-																							<% } %>
-																							<% } else { %>
-																								<h1>
-																									<li class="left">Order Placed </li>
-																									<% if(isAdminAuthenticated) { %>
-																										<form action="/readymark/<%= order._id %>" method="POST">
-																											<input type="hidden" name="_csrf" value="<%= csrfToken %>">
-																											<button class="btn" type="submit">Mark as Ready</button>
-																										</form>
-																									<% } %>
-																								</h1>
-																							<% } %>
+													<li >Ready for delivery </li>
+													<% if(isAdminAuthenticated) { %>
+														<form action="/deliverymark/<%= order._id %>" method="POST" class="right">
+															<input type="hidden" name="_csrf" value="<%= csrfToken %>">
+															<button class="btn" type="submit">Mark as Delivered</button>
+														</form>
+													<% } %>
+													<% } else { %>
+														<h1>
+															<li class="left">Order Placed </li>
+															<% if(isAdminAuthenticated) { %>
+																<form action="/readymark/<%= order._id %>" method="POST">
+																	<input type="hidden" name="_csrf" value="<%= csrfToken %>">
+																	<button class="btn" type="submit">Mark as Ready</button>
+																</form>
+															<% } %>
+														</h1>
+													<% } %>
 
 
-																				</ul>
-																		</div>
-																		<!-- <div class="col-xs-6">
-																				<ul type="none">
-																						<li class="right">25-03-2020</li>
-																				</ul>
-																		</div> -->
-																		<!-- status -->
+										</ul>
+								</div>
+								<!-- <div class="col-xs-6">
+										<ul type="none">
+												<li class="right">25-03-2020</li>
+										</ul>
+								</div> -->
+								<!-- status -->
 
 
 <!-- status ends -->
-																</div>
-														</div>
-												</div> <!-- Modal footer -->
-												<div class="modal-footer"> <button type="button" class="btn"><a href="/orders/<%= order._id %>" style="color:blue">Invoice</a></button> </div>
-										</div>
-								</div>
-						</div>
+
+		</div> <!-- Modal footer -->
+		<div class="modal-footer"> <button type="button" class="btn"><a href="/orders/<%= order._id %>" style="color:blue">Invoice</a></button> </div>
+</div>
+
+
+
+						<!-- modal -->
 
 
 
